Logo fix on mobile

--- a/assets/css/4-modules/_header.sass
+++ b/assets/css/4-modules/_header.sass
@@ -158,11 +158,6 @@ section.home-page
     height: 100vh
 
 
-
-
-
-
-
   .logo
     width: 300px
     height: 50px
@@ -219,3 +214,9 @@ section.home-page
 .nav-check
   position: absolute
   visibility: hidden
+
+
+@media (max-width: 500px)
+  .logo
+    width: 250px
+    height: 50px
